// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account Setup Menu it renders the chevron 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-up StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-up"
      >
        <svg
          data-icon="chevron-up"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-up
          </desc>
          <path
            d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the access control link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the authentication link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the connectors link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the organizations link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the overview link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the secrets link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;

exports[`Account Setup Menu it renders the dropdown with the subscriptions link 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main main"
  >
    <p
      class="StyledProps--font StyledProps--main text StyledProps--font-xsmall StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-space-between"
      style="display: flex; align-items: center;"
    >
      common.accountSetup
      <span
        class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-left-xsmall"
        icon="chevron-down"
      >
        <svg
          data-icon="chevron-down"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-down
          </desc>
          <path
            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <a
        class="link"
        href="/account/123/home/setup/"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          overview
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/authentication"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          authentication
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/connectors"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          connectorsLabel
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/secrets"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.secrets
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/access-control"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          accessControl
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/subscriptions"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          common.subscriptions.title
        </p>
      </a>
      <a
        class="link"
        href="/account/123/home/setup/organizations"
      >
        <p
          class="StyledProps--font StyledProps--main text"
        >
          orgsText
        </p>
      </a>
    </div>
  </div>
</div>
`;
